- Fixed bug #50810 (property_exists does not work for private)